<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context="com.oreo.mcommonjobs.Activity.ProviderViewRatingActivity">

    <TextView
        android:id="@+id/seekerName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="Asap-Regular"
        android:textAlignment="center"
        android:textColor="#06bebd"
        android:textSize="44sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/seekerName1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:id="@+id/averageField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/desc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/average_rating_provider"
                android:padding="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/avgRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textColor="#4c70a3"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rating1Field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/desc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attitude_provider_rating"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/rating1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textColor="#4c70a3"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rating2Field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/desc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpfulness"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/rating2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textColor="#4c70a3"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rating3Field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/desc4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quality_of_work_environment"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/rating3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textColor="#4c70a3"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/commentField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.90"
            android:padding="5dp">

            <TextView
                android:id="@+id/desc5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment_provider"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textColor="#4c70a3"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
