...



    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewprofiles"
        >


    </ListView>


...
