...
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="2"
        android:layout_marginTop="35dp">

        <Button
            android:id="@+id/btn_rate_provider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/raterName"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
...
            android:text="@string/rate_a_job_provider"
            android:textAllCaps="false"
            android:textColor="#4c70a3"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_view_my_ratings_seeker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btn_rate_seeker"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
...
