...
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_weight="40"
                    android:layout_height="wrap_content">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/button"
                        android:onClick="onClick (SignInActivity)"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="0"
...
