...
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_square_menu"
                        android:text="@string/view_all_jobs"
                        android:textColor="#06bebd" />

                    <Button
                        android:id="@+id/btn_ratings"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_square_menu"
                        android:text="@string/ratings_seeker"
                        android:textColor="#06bebd" />
...
