...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_addjob"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="44"
                        android:background="@drawable/btn_square_menu"
                        android:text="View All Jobs"
                        android:textColor="#06bebd" />

                    <Button
                        android:id="@+id/btn_messages"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...
